Version : 4.11.26 #XG1
- Add Map Tools
- Added XML debugging hexcode
- Add Create Art and Artidx Mul tool

Version : 4.11.25 #XG1
- New feature added: Names outsourced to Gumps and stored in an XML file, with custom formatting and editing based on ID.
- Search function adjusted to include names as well.
- Added sound button and disabled messages
- Gumps Added a tagging function for IDs in the Gumps.
- Add a Scréenshoot Button Main Contextmenu
- Octokit 9.0.0
- Serilog 3.1.1
- System Resources Extension 8.00
- Microsoft Web WebView2 1.0.2151
- Button Binary Code
- Button Morse Code
- Calendar
- Added zoom function in the tildedata -> Items

Version : 4.11.24 #XG1
- Added ItemControl a Built-in image swap function
- Added a notepad that saves information into an XML file, serving as a reminder that can be edited later.
- Added a Notes form in the main menu to display messages.
- Added a Animtionen Edit
- Octokit 8.1.1
- Discord Link fixed
- Added Main Images 5 New
- Incorporated mirror function for the context, allowing for individual image loading and bulk image loading.
- Added a Gump Edit new System.

Version : 4.11.23 #XG1
- Fixed an issue in Texturecutter regarding the input of hex addresses so that it works with and without the "#" symbol.
- Added a checkbox that, when active, moves the input from one textbox to another.
- Octokit Update 8.0.1
- Added an alarm clock feature where you can set a time for the alarm to go off.
- Settings are now saved, including the size of the MainForm and whether it's maximized, in the personalized settings. Positioning, however, is still not exact.
- The AlarmClock now has the feature to load an alternative wave file as an alarm sound.
- The Dec Hex Bin Converter now also saves the position where it was placed.
- TextureCutter now saves its position as well.
- Added a mask in TextureCutter for alignment during cutting and unloading the mask.
- Added a checkbox for the ideal height and width of image measurements.