@@ -70,5 +70,17 @@ namespace UoFiddler.Properties {
                 this["FormBinDecHexConverter"] = value;
             }
         }
+        
+        [global::System.Configuration.UserScopedSettingAttribute()]
+        [global::System.Diagnostics.DebuggerNonUserCodeAttribute()]
+        [global::System.Configuration.DefaultSettingValueAttribute("")]
+        public string LastSelectedProfile {
+            get {
+                return ((string)(this["LastSelectedProfile"]));
+            }
+            set {
+                this["LastSelectedProfile"] = value;
+            }
+        }
     }
 }
