@@ -25,6 +25,9 @@
         <setting name="FormBinDecHexConverter" serializeAs="String">
             <value>0, 0</value>
         </setting>
+        <setting name="LastSelectedProfile" serializeAs="String">
+            <value />
+        </setting>
     </UoFiddler.Properties.Settings>
   </userSettings>
 </configuration>
