@@ -2,6 +2,7 @@ Version : 4.11.26 #XG1
 - Add Map Tools
 - Added XML debugging hexcode
 - Add Create Art and Artidx Mul tool
+- Load Menu : Saves the last selected profile, reselecting it upon startup
 
 Version : 4.11.25 #XG1
 - New feature added: Names outsourced to Gumps and stored in an XML file, with custom formatting and editing based on ID.
